# ZoKrates

./: .gitignore  Cargo.toml  build.rs
.circleci/: config.yml
examples/: u32.code
examples/sha256/utils/32/: add.code
lib/: wraplibsnarkgadgets.cpp
scripts/: cov.sh
src/: autoparse.rs  compile.rs  helpers.rs  main.rs  u32_utils.rs  zokrates.lalrpop
zokrates/: Cargo.toml
zokrates-wasm-wrapper/: Cargo.toml  index.html  index.js  package.json  zokrates_wasm_wrapper.d.ts  zokrates_wasm_wrapper.js
zokrates-wasm-wrapper/src/: lib.rs
zokrates_cli/src/: bin.rs
zokrates_core/: Cargo.toml
zokrates_core/src/: bellman_absy.rs  compile.rs  lib.rs  libsnark.rs  optimizer.rs  r1cs.rs  semantics.rs  standard.rs  zpackage.rs
zokrates_core/src/field/: bls12.rs  bn.rs  mod.rs
zokrates_core/src/flat_absy/: flat_parameter.rs  mod.rs
zokrates_core/src/flat_absy_bellman/: mod.rs
zokrates_core/src/flatten/: mod.rs
zokrates_core/src/flatten_bellman/: mod.rs
zokrates_core/src/helpers/: mod.rs  rank_one.rs  rust.rs
zokrates_core/src/hybrid_ast/: folder.rs  mod.rs  parameter.rs  ty.rs  variable.rs
zokrates_core/src/hybrid_ast/types/: array.rs  boolean.rs  field.rs  mod.rs
zokrates_core/src/parser/parse/: expression.rs  expression_list.rs  import.rs  statement.rs
zokrates_core/src/parser/tokenize/: tokenizer.rs
zokrates_core/src/recursive_absy/: folder.rs  mod.rs
zokrates_core/src/recursive_absy/types/: field_element.rs  mod.rs
zokrates_core/src/typed_absy/: mod.rs
zokrates_core/src/types/: conversions_bellman.rs  mod.rs
